board/homepage/homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: homepage
      serviceAccountName: homepage
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:v2.3.0
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /app/config/
          name: config
        - mountPath: /app/config/logs
          name: logs
        startupProbe:
          httpGet:
            port: 3000
          failureThreshold: 10
          initialDelaySeconds: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            port: 3000
          failureThreshold: 3
          # initialDelaySeconds: 0
          periodSeconds: 1
        livenessProbe:
          httpGet:
            port: 3000
          failureThreshold: 5
          # initialDelaySeconds: 0
          periodSeconds: 10
        resources:
          requests:
            cpu: 5m
            memory: 128Mi
          limits:
            memory: 160Mi
      volumes:
      - name: config
        configMap:
          name: homepage
      - name: logs
        emptyDir: {}
