board/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
