board/homepage/istio-sticky-session.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  namespace: homepage
  name: homepage-sticky-session
spec:
  host: homepage.homepage.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sticky-session
          ttl: 0s
